--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,7 @@
 homepage: "https://www.plista.com"
 documentation: "https://www.plista.com"
 versions:
+  - sha: e3635d29adbad40ccfe76923dc5a364bfb38991b
+    changeNotes: Add categories
   - sha: 5c17833b1c6641d6f89c9219dbb65eb46803161d
     changeNotes: Initial release.
