--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,8 @@
 homepage: "https://www.plista.com"
 documentation: "https://www.plista.com"
 versions:
+  - sha: 82efb9a992fe0291fe2508b342764d0d84e83d04
+    changeNotes: Restrict permissions and add consent information
   - sha: e4c999cdf68056a366c27b422ad9167c42178f08
     changeNotes: Add missing license information
   - sha: e3635d29adbad40ccfe76923dc5a364bfb38991b
